[tool.poetry]
name = "practice-data-product"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
pyspark = "3.4.0"
pandas = "^2.2.3"
pydeequ = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
